--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,11 @@
 
     <metaassets/css/colors/default-dark name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+        <!-- Google -->
+        <script src="https://apis.google.com/js/platform.js"></script>
+        <meta name="google-signin-client_id" content="1019150181691-jdsl6sdkspg3s0p381gucn9528cs7of9.apps.googleusercontent.com">
+
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
